--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ function playSoul(event, showText=true){
     if(event==="sell") showRobotPods();
 }
 
-// عرض الكبسولات وتفعيل أصوات مختلفة لكل روبوت عند hover
+// عرض الكبسولات وتفعيل أصوات مختلفة لكل روبوت عند click
 function showRobotPods(){
     robotPods.innerHTML = "";
     robotPods.style.display="flex";
@@ -201,7 +201,7 @@ function showRobotPods(){
         const pod=document.createElement("div");
         pod.className="pod";
         pod.innerHTML=`<img src="${r.img}"><div>${r.name}</div><div>${r.price}</div>`;
-        pod.onmouseenter=()=>{
+        pod.onclick=()=>{
             // عرض النص مرة واحدة فقط لكل روبوت
             if(!playedText[r.sound]){
                 playSoul(r.sound,true);
@@ -210,7 +210,6 @@ function showRobotPods(){
                 playSoul(r.sound,false); // الصوت فقط بدون النص
             }
         };
-        pod.onclick=()=>playSoul("sell");
         robotPods.appendChild(pod);
     });
 }
